--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -9,4 +9,54 @@ body {
     height: 100%;
     width: 100%;
   }
+  font-family: 'Roboto'
+}
+
+.jumbotron {
+  padding: 10px 0;
+  border-radius: 0;
+  h1 {
+    margin-top: 15px;
+    margin-bottom: 15px;
+  }
+}
+
+.list-unstyled {
+  li {
+    text-align: center;
+    padding-top: 2px;
+    padding-bottom: 13px;
+    cursor: pointer;
+    &:hover {
+      box-shadow: #7b7b7b 0px 0px 2px;
+    }
+    > b {
+      font-size: 16px;
+    }
+  }
+}
+
+.wrapper {
+  text-align: center;
+  h3 {
+    border-bottom: 1px solid #b9b9b9;
+    padding-bottom: 18px;
+    width: 350px;
+    margin: 10px auto 20px;
+    color: #184fe8;
+  }
+  > div {
+    margin-bottom: 50px;
+  }
+}
+
+img {
+  position: relative;
+  right: 10px;
+}
+
+p {
+  .label {
+    margin: 10px; 
+  }
 }
